[project]
name = "vector-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-openai>=1.0.2",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.0",
    "pip>=25.3",
    "psycopg[binary,pool]>=3.2.12",
    "uvicorn>=0.38.0",
]
